# mpc-playground

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/mpc_playground/: mpc_interface.hpp
python/: plot_test.py
src/: mpc_interface.cpp  mpc_ms_ackermann.cpp  mpc_ms_ackermann_pybind.cpp  mpc_ss_differential.py
tests/: casadi_test.cpp  casadi_test_ipopt_hsl.cpp  casadi_test_ipopt_mumps.cpp
